milestone_2Parser.py
# Generated from milestone_2.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class milestone_2Parser ( Parser ):

    grammarFileName = "milestone_2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'{.'", "'.}'", "'shared'", "'`'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'*'", "'-'", "'/'", 
                     "'~'", "'&'", "'|'", "'<'", "'>'", "'@'", "'%'", "'!'", 
                     "'^'", "'.'", "','", "':'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "';'", "<INVALID>", "'var'", "'and'", 
                     "'addr'", "'as'", "'asm'", "'bind'", "'block'", "'break'", 
                     "'case'", "'cast'", "'concept'", "'const'", "'continue'", 
                     "'converter'", "'defer'", "'discard'", "'distinct'", 
                     "'div'", "'do'", "'elif'", "'else'", "'end'", "'enum'", 
                     "'except'", "'export'", "'finally'", "'for'", "'from'", 
                     "'func'", "'if'", "'import'", "'in'", "'include'", 
                     "'interface'", "'is'", "'isnot'", "'iterator'", "'let'", 
                     "'macro'", "'method'", "'mixin'", "'mod'", "'nil'", 
                     "'not'", "'notin'", "'object'", "'of'", "'or'", "'out'", 
                     "'proc'", "'ptr'", "'raise'", "'ref'", "'return'", 
                     "'shl'", "'shr'", "'static'", "'template'", "'try'", 
                     "'tuple'", "'type'", "'using'", "'when'", "'while'", 
                     "'xor'", "'yield'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SPACE", "NEWLINE", "INDENT", 
                      "COMMENT", "MULTCOMMENT", "EQUALS_OPERATOR", "ADD_OPERATOR", 
                      "MUL_OPERATOR", "MINUS_OPERATOR", "DIV_OPERATOR", 
                      "BITWISE_NOT_OPERATOR", "AND_OPERATOR", "OR_OPERATOR", 
                      "LESS_THAN", "GREATER_THAN", "AT", "MODULUS", "NOT_OPERATOR", 
                      "XOR_OPERATOR", "DOT", "COMMA", "COLON", "OPEN_PAREN", 
                      "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACK", 
                      "CLOSE_BRACK", "SEMI_COLON", "OTHER_TOKENS", "VARIABLE", 
                      "AND", "ADDR", "AS", "ASM", "BIND", "BLOCK", "BREAK", 
                      "CASE", "CAST", "CONCEPT", "CONST", "CONTINUE", "CONVERTER", 
                      "DEFER", "DISCARD", "DISTINCT", "DIV", "DO", "ELIF", 
                      "ELSE", "END", "ENUM", "EXCEPT", "EXPORT", "FINALLY", 
                      "FOR", "FROM", "FUNC", "IF", "IMPORT", "IN", "INCLUDE", 
                      "INTERFACE", "IS", "ISNOT", "ITERATOR", "LET", "MACRO", 
                      "METHOD", "MIXIN", "MOD", "NIL", "NOT", "NOTIN", "OBJECT", 
                      "OF", "OR", "OUT", "PROC", "PTR", "RAISE", "REF", 
                      "RETURN", "SHL", "SHR", "STATIC", "TEMPLATE", "TRY", 
                      "TUPLE", "TYPE", "USING", "WHEN", "WHILE", "XOR", 
                      "YIELD", "IDENTIFIER", "INT_LIT", "INT8_LIT", "INT16_LIT", 
                      "INT32_LIT", "INT64_LIT", "UINT_LIT", "UINT8_LIT", 
                      "UINT16_LIT", "UINT32_LIT", "UINT64_LIT", "HEXDIGIT", 
                      "OCTDIGIT", "BINDIGIT", "HEX_LIT", "DEC_LIT", "OCT_LIT", 
                      "BIN_LIT", "EXP", "FLOAT_LIT", "FLOAT32_SUFFIX", "FLOAT32_LIT", 
                      "FLOAT64_SUFFIX", "FLOAT64_LIT", "TRIPLESTR_LIT", 
                      "STR_LIT", "CHAR_LIT", "RSTR_LIT", "GENERALIZED_STR_LIT", 
                      "GENERALIZED_TRIPLESTR_LIT", "DIGIT", "LETTER", "OP0", 
                      "OP1", "OP2", "OP3", "OP4", "OP5", "OP6", "OP7", "OP8", 
                      "OP9", "OP10" ]

    RULE_comma = 0
    RULE_semicolon = 1
    RULE_colon = 2
    RULE_colcom = 3
    RULE_operator = 4
    RULE_prefixOperator = 5
    RULE_optInd = 6
    RULE_simpleExpr = 7
    RULE_arrowExpr = 8
    RULE_assignExpr = 9
    RULE_orExpr = 10
    RULE_andExpr = 11
    RULE_cmpExpr = 12
    RULE_sliceExpr = 13
    RULE_ampExpr = 14
    RULE_plusExpr = 15
    RULE_mulExpr = 16
    RULE_dollarExpr = 17
    RULE_primary = 18
    RULE_identOrLiteral = 19
    RULE_par = 20
    RULE_condExpr = 21
    RULE_ifExpr = 22
    RULE_pragma = 23
    RULE_test = 24
    RULE_expr = 25
    RULE_typeKeyw = 26
    RULE_typeDesc = 27
    RULE_optPar = 28
    RULE_generalizedLit = 29
    RULE_symbol = 30
    RULE_literal = 31
    RULE_primarySuffix = 32
    RULE_arrayConstr = 33
    RULE_setOrTableConstr = 34
    RULE_castExpr = 35
    RULE_exprColonEqExpr = 36
    RULE_parKeyw = 37
    RULE_simpleStmt = 38
    RULE_complexOrSimpleStmt = 39
    RULE_pragmaStmt = 40
    RULE_exprStmt = 41
    RULE_importStmt = 42
    RULE_includeStmt = 43
    RULE_returnStmt = 44
    RULE_raiseStmt = 45
    RULE_yieldStmt = 46
    RULE_discardStmt = 47
    RULE_breakStmt = 48
    RULE_continueStmt = 49
    RULE_condStmt = 50
    RULE_ifStmt = 51
    RULE_whenStmt = 52
    RULE_whileStmt = 53
    RULE_commentStmt = 54
    RULE_forStmt = 55
    RULE_blockStmt = 56
    RULE_staticStmt = 57
    RULE_deferStmt = 58
    RULE_asmStmt = 59
    RULE_colonBody = 60
    RULE_identVis = 61
    RULE_identVisDot = 62
    RULE_identWithPragma = 63
    RULE_stmt = 64
    RULE_module = 65
    RULE_start = 66

    ruleNames =  [ "comma", "semicolon", "colon", "colcom", "operator", 
                   "prefixOperator", "optInd", "simpleExpr", "arrowExpr", 
                   "assignExpr", "orExpr", "andExpr", "cmpExpr", "sliceExpr", 
                   "ampExpr", "plusExpr", "mulExpr", "dollarExpr", "primary", 
                   "identOrLiteral", "par", "condExpr", "ifExpr", "pragma", 
                   "test", "expr", "typeKeyw", "typeDesc", "optPar", "generalizedLit", 
                   "symbol", "literal", "primarySuffix", "arrayConstr", 
                   "setOrTableConstr", "castExpr", "exprColonEqExpr", "parKeyw", 
                   "simpleStmt", "complexOrSimpleStmt", "pragmaStmt", "exprStmt", 
                   "importStmt", "includeStmt", "returnStmt", "raiseStmt", 
                   "yieldStmt", "discardStmt", "breakStmt", "continueStmt", 
                   "condStmt", "ifStmt", "whenStmt", "whileStmt", "commentStmt", 
                   "forStmt", "blockStmt", "staticStmt", "deferStmt", "asmStmt", 
                   "colonBody", "identVis", "identVisDot", "identWithPragma", 
                   "stmt", "module", "start" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    SPACE=6
    NEWLINE=7
    INDENT=8
    COMMENT=9
    MULTCOMMENT=10
    EQUALS_OPERATOR=11
    ADD_OPERATOR=12
    MUL_OPERATOR=13
    MINUS_OPERATOR=14
    DIV_OPERATOR=15
    BITWISE_NOT_OPERATOR=16
    AND_OPERATOR=17
    OR_OPERATOR=18
    LESS_THAN=19
    GREATER_THAN=20
    AT=21
    MODULUS=22
    NOT_OPERATOR=23
    XOR_OPERATOR=24
    DOT=25
    COMMA=26
    COLON=27
    OPEN_PAREN=28
    CLOSE_PAREN=29
    OPEN_BRACE=30
    CLOSE_BRACE=31
    OPEN_BRACK=32
    CLOSE_BRACK=33
    SEMI_COLON=34
    OTHER_TOKENS=35
    VARIABLE=36
    AND=37
    ADDR=38
    AS=39
    ASM=40
    BIND=41
    BLOCK=42
    BREAK=43
    CASE=44
    CAST=45
    CONCEPT=46
    CONST=47
    CONTINUE=48
    CONVERTER=49
    DEFER=50
    DISCARD=51
    DISTINCT=52
    DIV=53
    DO=54
    ELIF=55
    ELSE=56
    END=57
    ENUM=58
    EXCEPT=59
    EXPORT=60
    FINALLY=61
    FOR=62
    FROM=63
    FUNC=64
    IF=65
    IMPORT=66
    IN=67
    INCLUDE=68
    INTERFACE=69
    IS=70
    ISNOT=71
    ITERATOR=72
    LET=73
    MACRO=74
    METHOD=75
    MIXIN=76
    MOD=77
    NIL=78
    NOT=79
    NOTIN=80
    OBJECT=81
    OF=82
    OR=83
    OUT=84
    PROC=85
    PTR=86
    RAISE=87
    REF=88
    RETURN=89
    SHL=90
    SHR=91
    STATIC=92
    TEMPLATE=93
    TRY=94
    TUPLE=95
    TYPE=96
    USING=97
    WHEN=98
    WHILE=99
    XOR=100
    YIELD=101
    IDENTIFIER=102
    INT_LIT=103
    INT8_LIT=104
    INT16_LIT=105
    INT32_LIT=106
    INT64_LIT=107
    UINT_LIT=108
    UINT8_LIT=109
    UINT16_LIT=110
    UINT32_LIT=111
    UINT64_LIT=112
    HEXDIGIT=113
    OCTDIGIT=114
    BINDIGIT=115
    HEX_LIT=116
    DEC_LIT=117
    OCT_LIT=118
    BIN_LIT=119
    EXP=120
    FLOAT_LIT=121
    FLOAT32_SUFFIX=122
    FLOAT32_LIT=123
    FLOAT64_SUFFIX=124
    FLOAT64_LIT=125
    TRIPLESTR_LIT=126
    STR_LIT=127
    CHAR_LIT=128
    RSTR_LIT=129
    GENERALIZED_STR_LIT=130
    GENERALIZED_TRIPLESTR_LIT=131
    DIGIT=132
    LETTER=133
    OP0=134
    OP1=135
    OP2=136
    OP3=137
    OP4=138
    OP5=139
    OP6=140
    OP7=141
    OP8=142
    OP9=143
    OP10=144

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(milestone_2Parser.COMMA, 0)

        def COMMENT(self):
            return self.getToken(milestone_2Parser.COMMENT, 0)

        def getRuleIndex(self):
            return milestone_2Parser.RULE_comma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComma" ):
                listener.enterComma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComma" ):
                listener.exitComma(self)




    def comma(self):

        localctx = milestone_2Parser.CommaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_comma)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(milestone_2Parser.COMMA)
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 135
                self.match(milestone_2Parser.COMMENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SemicolonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI_COLON(self):
            return self.getToken(milestone_2Parser.SEMI_COLON, 0)

        def COMMENT(self):
            return self.getToken(milestone_2Parser.COMMENT, 0)

        def getRuleIndex(self):
            return milestone_2Parser.RULE_semicolon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSemicolon" ):
                listener.enterSemicolon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSemicolon" ):
                listener.exitSemicolon(self)




    def semicolon(self):

        localctx = milestone_2Parser.SemicolonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_semicolon)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(milestone_2Parser.SEMI_COLON)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==milestone_2Parser.COMMENT:
                self.state = 139
                self.match(milestone_2Parser.COMMENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(milestone_2Parser.COLON, 0)

        def COMMENT(self):
            return self.getToken(milestone_2Parser.COMMENT, 0)

        def getRuleIndex(self):
            return milestone_2Parser.RULE_colon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColon" ):
                listener.enterColon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColon" ):
                listener.exitColon(self)




    def colon(self):

        localctx = milestone_2Parser.ColonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_colon)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(milestone_2Parser.COLON)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==milestone_2Parser.COMMENT:
                self.state = 143
                self.match(milestone_2Parser.COMMENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColcomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(milestone_2Parser.COLON, 0)

        def COMMENT(self):
            return self.getToken(milestone_2Parser.COMMENT, 0)

        def getRuleIndex(self):
            return milestone_2Parser.RULE_colcom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColcom" ):
                listener.enterColcom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColcom" ):
                listener.exitColcom(self)




    def colcom(self):

        localctx = milestone_2Parser.ColcomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_colcom)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(milestone_2Parser.COLON)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 147
                self.match(milestone_2Parser.COMMENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP0(self):
            return self.getToken(milestone_2Parser.OP0, 0)

        def OP1(self):
            return self.getToken(milestone_2Parser.OP1, 0)

        def OP2(self):
            return self.getToken(milestone_2Parser.OP2, 0)

        def OP3(self):
            return self.getToken(milestone_2Parser.OP3, 0)

        def OP4(self):
            return self.getToken(milestone_2Parser.OP4, 0)

        def OP5(self):
            return self.getToken(milestone_2Parser.OP5, 0)

        def OP6(self):
            return self.getToken(milestone_2Parser.OP6, 0)

        def OP7(self):
            return self.getToken(milestone_2Parser.OP7, 0)

        def OP8(self):
            return self.getToken(milestone_2Parser.OP8, 0)

        def OP9(self):
            return self.getToken(milestone_2Parser.OP9, 0)

        def OR(self):
            return self.getToken(milestone_2Parser.OR, 0)

        def XOR(self):
            return self.getToken(milestone_2Parser.XOR, 0)

        def AND(self):
            return self.getToken(milestone_2Parser.AND, 0)

        def IS(self):
            return self.getToken(milestone_2Parser.IS, 0)

        def ISNOT(self):
            return self.getToken(milestone_2Parser.ISNOT, 0)

        def IN(self):
            return self.getToken(milestone_2Parser.IN, 0)

        def NOTIN(self):
            return self.getToken(milestone_2Parser.NOTIN, 0)

        def OF(self):
            return self.getToken(milestone_2Parser.OF, 0)

        def DIV(self):
            return self.getToken(milestone_2Parser.DIV, 0)

        def MOD(self):
            return self.getToken(milestone_2Parser.MOD, 0)

        def SHL(self):
            return self.getToken(milestone_2Parser.SHL, 0)

        def SHR(self):
            return self.getToken(milestone_2Parser.SHR, 0)

        def NOT(self):
            return self.getToken(milestone_2Parser.NOT, 0)

        def STATIC(self):
            return self.getToken(milestone_2Parser.STATIC, 0)

        def getRuleIndex(self):
            return milestone_2Parser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)



